[package]
name = "day1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../../crates/util" }

[lib]
name = "day1"           # The name of the target.
path = "src/lib/mod.rs" # The source file of the target.

[[bin]]
name = "part1"
path = "src/bin/part1.rs"
